--- a/paper/evaluation/data-collection/travis.tex
+++ b/paper/evaluation/data-collection/travis.tex
@@ -3,7 +3,7 @@
 \subsection{\travisci{} build data}
 The first three research questions have been answered by analysing data from projects hosted on \travisci{} (\cref{sssec:travisci}). This data was obtained from two sources.\\
 
-\noindent The first source comprises a database \cite{travisanalysis} of $\SI{35793144}{}$ log files of executed test runs, contributed by Durieux et al. The magnitude of the dataset ($\SI{61.11}{\gibi\byte}$) requires a big data approach to parse these log files. Two straightforward \Gls{mapreduce} pipelines have been created using the Apache Spark\footnote{\url{https://spark.apache.org/}} engine, to provide an answer to the first and third research question respectively.\\
+\noindent The first source comprises a database \cite{travisanalysis} of $\SI{35793144}{}$ log files of executed test runs, contributed by Durieux et al. The magnitude of the dataset ($\SI{61.11}{\gibi\byte}$) requires a big data approach to parse these log files. Two straightforward \Gls{mapreduce} pipelines have been created using the Apache Spark\footnote{\url{https://spark.apache.org/}} engine, to provide an answer to the first and second research question respectively.\\
 
 \begin{figure}[htbp!]
 	\centering
@@ -19,4 +19,4 @@ The first three research questions have been answered by analysing data from pro
 	\label{fig:eval-mapreduce-2}
 \end{figure}
 
-\noindent In addition to the first source, another $\SI{3702595}{}$ jobs have been analysed from the \mbox{\emph{TravisTorrent}} project \cite{msr17challenge}. To identify which projects are using \travisci{}, the authors have crawled the \github{} API and examined the build status of every commit to retrieve the run identifier. Subsequently, the \travisci{} API is used to obtain the build information, along with other useful statistics about the project. One of these additional values is the identifier of the previously executed run, which can be used to answer the second question. Another interesting value is the amount of failed test cases. This value provides an accurate answer to the first research question since it indicates why the test run has failed. Without this information, the test suite might have failed to compile as opposed to an actual failure in the test cases. This dataset has been excluded from the third research question, as the included execution time does not correspond to the actual duration reported on the webpage of \travisci{}. The authors have provided a Google BigQuery\footnote{\url{https://bigquery.cloud.google.com/}} interface to allow querying the dataset more efficiently. The executed queries have been listed in \Cref{appendix:travistorrent}.
+\noindent In addition to the first source, another $\SI{3702595}{}$ jobs have been analysed from the \mbox{\emph{TravisTorrent}} project \cite{msr17challenge}. To identify which projects are using \travisci{}, the authors have crawled the \github{} API and examined the build status of every commit to retrieve the run identifier. Subsequently, the \travisci{} API is used to obtain the build information, along with other useful statistics about the project. One of these additional values is the identifier of the previously executed run, which can be used to answer the second research question. Another interesting value is the amount of failed test cases. This value provides an accurate answer to the first research question since it indicates why the test run has failed. Without this information, the test suite might have failed to compile as opposed to an actual failure in the test cases. This dataset has been excluded from the second research question, as the included execution time does not correspond to the actual duration reported on the webpage of \travisci{}. The authors have provided a Google BigQuery\footnote{\url{https://bigquery.cloud.google.com/}} interface to allow querying the dataset more efficiently. The executed queries have been listed in \Cref{appendix:travistorrent}.
