--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -186,9 +186,8 @@
 
 % Vulgarising summary.
 \pagestyle{plain}
-
 %\input{summary/vulgarising.tex}
-%\clearpage
+\clearpage
 
 \pagestyle{fancy}
 
@@ -200,35 +199,28 @@
 % Corpus.
 \mainmatter
 
-\begin{figure}[htbp!]
-	\centering
-	\input{assets/tikz/saturating-counter.tex}
-	\caption{Saturating counter}
-	\label{fig:saturating-counter}
-\end{figure}
-
 %\input{glossary.tex}
-%\clearpage
+\clearpage
 %\input{introduction.tex}
-%\clearpage
+\clearpage
 %\input{software-engineering.tex}
-%\clearpage
+\clearpage
 %\input{related-work.tex}
-%\clearpage
+\clearpage
 %\input{velocity.tex}
-%\clearpage
-%\input{evaluation.tex}
-%\clearpage
-%\input{conclusion.tex}
-%\clearpage
+\clearpage
+\input{evaluation.tex}
+\clearpage
+\input{conclusion.tex}
+\clearpage
 %\input{bibliography.tex}
-%\clearpage
+\clearpage
 %\input{list-of-figures.tex}
-%\clearpage
+\clearpage
 %\input{list-of-listings.tex}
-%\clearpage
+\clearpage
 %\input{list-of-tables.tex}
-%\clearpage
+\clearpage
 %\input{appendices.tex}
 
 \end{document}
