--- a/paper/evaluation/test-subjects.tex
+++ b/paper/evaluation/test-subjects.tex
@@ -3,7 +3,7 @@
 \section{Test subjects}
 
 \subsection{Dodona}
-Dodona\footnote{\url{https://dodona.ugent.be/}} is an open-source online learning environment created by Ghent University, which allows students from secondary schools and universities in Belgium and South-Korea to submit solutions to programming exercises and receive instant, automated feedback. The application is built using the Ruby-on-Rails web framework. To automate the testing process of the application, Dodona employs \githubactions{} (\cref{sssec:github-actions}) which executes the more than $\SI{450}{}$ test cases in the test suite and performs static code analysis. The application is tested using the default \texttt{MiniTest} testing framework and \texttt{SimpleCov}\footnote{\url{https://github.com/colszowka/simplecov}} is used to record the coverage of the test suite, which is currently approximately $\SI{89}{\percent}$.
+Dodona\footnote{\url{https://dodona.ugent.be/}} is an open-source online learning environment created by Ghent University, which allows students from secondary schools and universities in Belgium and South-Korea to submit solutions to programming exercises and receive instant, automated feedback. The application is built using the Ruby-on-Rails web framework. To automate the testing process of the application, Dodona employs \githubactions{} (\cref{sssec:github-actions}) which executes the more than $\SI{450}{}$ test cases in the test suite and performs static code analysis. The application is tested using the default \texttt{MiniTest} testing framework and \texttt{SimpleCov}\footnote{\url{https://github.com/colszowka/simplecov}} is used to record the coverage of the test suite, which is currently approximately $\SI{89}{\percent}$. This analysis will consider builds between January 1, 2020 and May 17, 2020.
 
 \subsection{Stratego}
 The second test subject is an application which was created for the Software Engineering Lab 2 course at Ghent University in 2018. The application was created for a Belgian gas transmission system operator and consists of two main components: a web frontend and a backend. This thesis will test the backend in particular since it is written in Java using the Spring framework. Furthermore, the application uses Gradle and JUnit to execute the $\SIrange{300}{400}{}$ test cases in the test suite, allowing the Java agent (\cref{ssec:velocity-frontend}) to be applied directly.
