--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -160,7 +160,7 @@
 \pagestyle{empty}
 %\includepdf[pages=-]{titlepage.pdf}
 
-%\blankpage{}
+\blankpage{}
 
 % Admission.
 %\input{admission.tex}
@@ -191,7 +191,7 @@
 
 \pagestyle{fancy}
 
-%\blankpage{}
+\blankpage{}
 
 % ToC.
 %\tableofcontents
@@ -207,11 +207,11 @@
 \clearpage
 %\input{related-work.tex}
 \clearpage
-%\input{velocity.tex}
+\input{velocity.tex}
 \clearpage
-\input{evaluation.tex}
+%\input{evaluation.tex}
 \clearpage
-\input{conclusion.tex}
+%\input{conclusion.tex}
 \clearpage
 %\input{bibliography.tex}
 \clearpage
